tests/specs/ecosystem/dnbkr/cygnals/0_2_0.test
dnbkr/cygnals/0.2.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'HTMLElement'.
    at file://<tmpdir>/src/dom.ts:12:41

TS2304 [ERROR]: Cannot find name 'HTMLElementEventMap'.
    at file://<tmpdir>/src/dom.ts:12:70

TS2304 [ERROR]: Cannot find name 'HTMLElementEventMap'.
    at file://<tmpdir>/src/dom.ts:12:123

Found 3 errors.

error: Type checking failed.

